@@ -1,2 +1,3 @@
-.build
-Acme-CPANAuthors-MBTI-*
+/.build
+/Acme-CPANAuthors-MBTI-*
+/tmp/
