@@ -6,15 +6,23 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Added / develop requires]
  - Dist::Zilla::Plugin::MetaYAML::Minimal
+ - Dist::Zilla::Plugin::RemovePrereqs::Provided
+ - English
+ - Software::License::Perl_5
+ - Test::MinimumVersion
 
  [Changed / develop requires]
  - Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes 0.001001 → 0.004002
  - Dist::Zilla::Plugin::Author::KENTNL::TravisCI 0 → 0.001002
- - Test::More 0 → 0.88
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+ - Test::More 0 → 0.96
 
  [Changed / develop suggests]
- - Dist::Zilla::App::Command::bakeini 0.002000 → 0.002005
- - Dist::Zilla::PluginBundle::Author::KENTNL 2.023002 → 2.024002
+ - Dist::Zilla::App::Command::bakeini 0.002000 → 0.002006
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.023002 → 2.025021
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
  [Removed / develop requires]
  - Dist::Zilla::Plugin::MetaYAML
