@@ -1,9 +1,13 @@
 Release history for Acme-CPANAuthors-MBTI
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+ - Fix build failure due to the same
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001001, see misc/*.deps* for details
- - develop: +1 ↑3 -2 (recommends: +1, suggests: ↑2)
+ - develop: +5 ↑4 -2 (recommends: +1, suggests: ↑2)
+ - test: ↓1
 
 0.001001 2015-01-18T07:51:34Z 65b7481
  [Bugfix]
